[gd_scene load_steps=5 format=2]

[ext_resource path="res://background/background_tile.gd" type="Script" id=1]
[ext_resource path="res://background/img_tile/jap_tile_01.png" type="Texture" id=2]
[ext_resource path="res://background/img_tile/transparent_128x128.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="background_tile" type="Node2D"]
script = ExtResource( 1 )

[node name="tile_sprites" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0, 0, 0.784314 )
frames = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
